--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <div role="main">
   <h1>Lucio Poveda</h1>
-  <h2>Web UI Designer at <a href="">Globant</a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently designing and developing the future of education.</p>
+  <h2>Web UI Designer at <a href="http://www.globant.com/" target="_blank">Globant</a></h2>
+  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently designing and developing the future of education for Blackboard.</p>
 </div>
 <footer>
   <ul>
