--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <div role="main">
   <h1>Lucio Poveda</h1>
   <h2>Web UI Designer at <a href="http://www.globant.com/" target="_blank">Globant</a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently designing and developing the future of education for Blackboard.</p>
+  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working for <a href="http://www.nationalgeographic.com/" target="_blank">NatGeo</a>.</p>
 </div>
 <footer>
   <ul>
     <li>
-      <a href="">Twitter</a>
+      <a href="https://twitter.com/luciopoveda" target="_blank">Twitter</a>
     </li>
     <li>
-      <a href="">LinkedIn</a>
+      <a href="https://ar.linkedin.com/in/luciopoveda" target="_blank">LinkedIn</a>
     </li>
     <li>
-      <a href="">Dribbler</a>
+      <a href="https://github.com/kohm/">GitHub</a>
     </li>
   </ul>
 </footer>
