--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div role="main">
   <h1>Lucio Poveda</h1>
-  <h2>Web UI Designer at <a href="http://www.globant.com/" target="_blank">Globant</a></h2>
+  <h2>Front-end Enigneer at <a href="http://www.globant.com/" target="_blank">Globant</a></h2>
   <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.k12.com/" target="_blank">k<sup>12</sup></a>.</p>
 </div>
 <footer>
