--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <div role="main">
   <h1>Lucio Poveda</h1>
-  <h2>Front-end Enigneer at <a href="http://www.globant.com/" target="_blank">Globant</a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.k12.com/" target="_blank">k<sup>12</sup></a>.</p>
+  <h2>Front-end Enigneer at <a href="http://www.globant.com/" target="_blank">3 | Share</a></h2>
+  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" target="_blank">Altria</sup></a>.</p>
 </div>
 <footer>
   <ul>
