--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div role="main">
   <h1>Lucio Poveda</h1>
-  <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" target="_blank">3 | Share</a></h2>
+  <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" target="_blank"><img src="https://www.3sharecorp.com/hs-fs/hubfs/Assets2017/Logos/High%20Res/logo.png?t=1506030928670&amp;cos_cdn=1&amp;width=620&amp;cos_cdn=1&amp;name=logo.png"></a></h2>
   <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" target="_blank">Altria</sup></a>.</p>
 </div>
 <footer>
