--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <div role="main">
   <h1>Lucio Poveda</h1>
   <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/Assets2017/Logos/High%20Res/logo.png?t=1506030928670&amp;cos_cdn=1&amp;width=620&amp;cos_cdn=1&amp;name=logo.png"></a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" target="_blank">Altria</sup></a>.</p>
+  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" title="Altria" target="_blank">Altria</sup></a>.</p>
 </div>
 <footer>
   <ul>
     <li>
-      <a href="https://twitter.com/luciopoveda" target="_blank">Twitter</a>
+      <a href="https://twitter.com/luciopoveda" title="Twitter" target="_blank">Twitter</a>
     </li>
     <li>
-      <a href="https://ar.linkedin.com/in/luciopoveda" target="_blank">LinkedIn</a>
+      <a href="https://ar.linkedin.com/in/luciopoveda" title="LinkedIn" target="_blank">LinkedIn</a>
     </li>
     <li>
-      <a href="https://github.com/kohm/">GitHub</a>
+      <a href="https://github.com/kohm/" title="GitHub">GitHub</a>
     </li>
   </ul>
 </footer>
