--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="http://fonts.googleapis.com/css?family=Raleway:800&amp;Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="luciopoveda.css"/>
   <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
