--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
-<div role="main">
+<div clrole="main">
   <h1>Lucio Poveda</h1>
   <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/Assets2017/Logos/High%20Res/logo.png?t=1506030928670&amp;cos_cdn=1&amp;width=620&amp;cos_cdn=1&amp;name=logo.png"></a></h2>
   <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" title="Altria" target="_blank">Altria</sup></a>.</p>
+    <div class="footer">
+        <ul>
+            <li>
+                <a href="https://twitter.com/luciopoveda" title="Twitter" target="_blank">Twitter</a>
+            </li>
+            <li>
+                <a href="https://ar.linkedin.com/in/luciopoveda" title="LinkedIn" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/kohm/" title="GitHub">GitHub</a>
+            </li>
+        </ul>
+    </div>
 </div>
-<footer>
-  <ul>
-    <li>
-      <a href="https://twitter.com/luciopoveda" title="Twitter" target="_blank">Twitter</a>
-    </li>
-    <li>
-      <a href="https://ar.linkedin.com/in/luciopoveda" title="LinkedIn" target="_blank">LinkedIn</a>
-    </li>
-    <li>
-      <a href="https://github.com/kohm/" title="GitHub">GitHub</a>
-    </li>
-  </ul>
-</footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
