--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div role="main">
   <h1>Lucio Poveda</h1>
   <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/Assets2017/Logos/High%20Res/logo.png?t=1506030928670&amp;cos_cdn=1&amp;width=620&amp;cos_cdn=1&amp;name=logo.png"></a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="http://www.altria.com" title="Altria" target="_blank">Altria</sup></a>.</p>
+  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="https://www.averydennison.com/en/home.html" title="Altria" target="_blank">Avery Dennison</sup></a>.</p>
 </div>
 <footer>
   <ul>
