updating landing page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="I’m an Spain based Front-end Engineer">
+  <meta name="msapplication-TileColor" content="#D83434">
+  <meta name="msapplication-TileImage" content="path/to/tileicon.png">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link rel="stylesheet" href="luciopoveda.css"/>
+  <link rel="stylesheet" href="luciopoveda.min.css"/>
   <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
 <div role="main">
-  <h1>Lucio Poveda</h1>
-  <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/Assets2017/Logos/High%20Res/logo.png?t=1506030928670&amp;cos_cdn=1&amp;width=620&amp;cos_cdn=1&amp;name=logo.png"></a></h2>
-  <p>I’m an Argentina based multidisciplinary designer, developer, and proactive who is currently working on <a href="https://www.averydennison.com/en/home.html" title="Altria" target="_blank">Avery Dennison</sup></a>.</p>
+  <h1>Lucio Poveda Bertos</h1>
+  <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/2017%20Website%20Assets/Logos/High%20Res/3SHARE_LOGO_WHITE_2018.png?width=532&name=3SHARE_LOGO_WHITE_2018.png"></a></h2>
+  <p>I’m an Spain based multidisciplinary designer, developer, and proactive who is currently working on <a href="https://www.tetrapak.com/" title="TetraPak" target="_blank">Tetra Pak</a>.</p>
 </div>
 <footer>
   <ul>
