updating landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="I’m an Spain based Front-end Engineer">
+  <meta name="description" content="I’m an Spain based Front-end Engineer working mainly with AEM (Adobe Experience Manager) CMS (Content Management System) with 6+ years working as a Front-end developer and 3+ year with AEM">
   <meta name="msapplication-TileColor" content="#D83434">
   <meta name="msapplication-TileImage" content="path/to/tileicon.png">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
