--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="I’m an Spain based Front-end Engineer working mainly with AEM (Adobe Experience Manager) CMS (Content Management System) with 6+ years working as a Front-end developer and 3+ year with AEM">
   <meta name="msapplication-TileColor" content="#D83434">
   <meta name="msapplication-TileImage" content="path/to/tileicon.png">
+  <link rel="canonical" href="http://luciopoveda.com"/>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="luciopoveda.min.css"/>
   <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
