--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="I’m an Spain based Front-end Engineer working mainly with AEM (Adobe Experience Manager) CMS (Content Management System) with 6+ years working as a Front-end developer and 3+ year with AEM">
-  <meta name="msapplication-TileColor" content="#D83434">
-  <meta name="msapplication-TileImage" content="path/to/tileicon.png">
-  <link rel="canonical" href="http://luciopoveda.com"/>
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link rel="stylesheet" href="luciopoveda.min.css"/>
-  <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+          content="I’m an Spain based Front-end Engineer working mainly with AEM (Adobe Experience Manager) CMS (Content Management System) with 6+ years working as a Front-end developer and 3+ year with AEM">
+    <meta name="msapplication-TileColor" content="#D83434">
+    <meta name="msapplication-TileImage" content="path/to/tileicon.png">
+    <link rel="canonical" href="http://luciopoveda.com"/>
+    <link href="https://fonts.googleapis.com/css?family=Baskervville|Nunito+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="luciopoveda.min.css"/>
+    <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
-<div role="main">
-  <h1>Lucio Poveda Bertos</h1>
-  <h2>AEM Front-end Enigneer at <a href="https://www.3sharecorp.com/" title="3 Share" target="_blank"><img alt="3 Share logo" src="https://www.3sharecorp.com/hs-fs/hubfs/2017%20Website%20Assets/Logos/High%20Res/3SHARE_LOGO_WHITE_2018.png?width=532&name=3SHARE_LOGO_WHITE_2018.png"></a></h2>
-  <p>I’m a Spain based multidisciplinary designer, developer, and proactive who is currently working on <a href="https://www.tetrapak.com/" title="TetraPak" target="_blank">Tetra Pak</a>.</p>
+<div role="main" class="main">
+    <div class="card">
+        <h1>Lucio Poveda Bertos</h1>
+        <h2>ARGENTINEAN INNOVATIVE DEVELOPER LIVING IN SPAIN</h2>
+        <footer>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/luciopoveda" title="Twitter" target="_blank">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://ar.linkedin.com/in/luciopoveda" title="LinkedIn" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/kohm/" title="GitHub">GitHub</a>
+                </li>
+            </ul>
+        </footer>
+    </div>
 </div>
-<footer>
-  <ul>
-    <li>
-      <a href="https://twitter.com/luciopoveda" title="Twitter" target="_blank">Twitter</a>
-    </li>
-    <li>
-      <a href="https://ar.linkedin.com/in/luciopoveda" title="LinkedIn" target="_blank">LinkedIn</a>
-    </li>
-    <li>
-      <a href="https://github.com/kohm/" title="GitHub">GitHub</a>
-    </li>
-  </ul>
-</footer>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-67267776-1', 'auto');
   ga('send', 'pageview');
