--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="msapplication-TileImage" content="path/to/tileicon.png">
     <link rel="canonical" href="http://luciopoveda.com"/>
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Nunito+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="luciopoveda.min.css"/>
+    <link rel="stylesheet" href="luciopoveda.css"/>
     <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
 <div role="main" class="main">
     <div class="card">
-        <h1>Lucio Poveda Bertos</h1>
+        <h1 class="glitch">Lucio Poveda Bertos</h1>
         <h2>ARGENTINEAN INNOVATIVE DEVELOPER LIVING IN SPAIN</h2>
         <footer>
             <ul>
