--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div role="main" class="main">
     <div class="card">
-        <h1 class="glitch">Lucio Poveda Bertos</h1>
+        <h1>Lucio Poveda Bertos</h1>
         <h2>ARGENTINEAN INNOVATIVE DEVELOPER LIVING IN SPAIN</h2>
         <footer>
             <ul>
