--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="msapplication-TileImage" content="path/to/tileicon.png">
     <link rel="canonical" href="http://luciopoveda.com"/>
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Nunito+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="luciopoveda.css"/>
+    <link rel="stylesheet" href="src/luciopoveda.min.css"/>
     <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
-<div role="main" class="main">
+<div role="main" class="main hidden">
     <div class="card">
         <h1>Lucio Poveda Bertos</h1>
         <h2>ARGENTINEAN INNOVATIVE DEVELOPER LIVING IN SPAIN</h2>
@@ -49,6 +49,8 @@
   ga('send', 'pageview');
 
 </script>
+
+<script src="src/main.js" type="text/javascript"></script>
 
 </body>
 </html>
