--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="canonical" href="http://luciopoveda.com"/>
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/luciopoveda.min.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <title>Lucio Poveda : UI/UX • Designer • Prototyper • Developer</title>
 </head>
 <body>
