fixing canonical url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           content="I’m an Spain based Front-end Engineer working mainly with AEM (Adobe Experience Manager) CMS (Content Management System) with 6+ years working as a Front-end developer and 3+ year with AEM">
     <meta name="msapplication-TileColor" content="#D83434">
     <meta name="msapplication-TileImage" content="path/to/tileicon.png">
-    <link rel="canonical" href="http://luciopoveda.com"/>
+    <link rel="canonical" href="https://luciopoveda.com"/>
     <link href="https://fonts.googleapis.com/css?family=Baskervville|Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/luciopoveda.min.css"/>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
